[gd_scene load_steps=5 format=2]

[ext_resource path="res://res/fonts/BRLNSR.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://main/popups/popup-new-map.gd" type="Script" id=2]
[ext_resource path="res://HTML5-File-Exchange-for-Godot-master/addons/HTML5FileExchange/HTML5FileExchange.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 1 )

[node name="popup-new-map" type="AcceptDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1100.0
margin_bottom = -716.0
rect_min_size = Vector2( 300, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 292.0
margin_bottom = 66.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hboxBT" type="HBoxContainer" parent="vbox"]
margin_right = 284.0
margin_bottom = 20.0

[node name="loadBkgd" type="Button" parent="vbox/hboxBT"]
margin_right = 140.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "LOAD BACKGROUND"
__meta__ = {
"_editor_description_": ""
}

[node name="fxchg" type="Node" parent="vbox/hboxBT/loadBkgd"]
script = ExtResource( 3 )

[node name="hexMode" type="Button" parent="vbox/hboxBT"]
margin_left = 144.0
margin_right = 284.0
margin_bottom = 20.0
hint_tooltip = "This feature is currently unavailable"
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
disabled = true
text = "ENABLE HEX-MODE"
__meta__ = {
"_editor_description_": ""
}

[node name="imgLoadLabel" type="Label" parent="vbox"]
margin_top = 24.0
margin_right = 284.0
margin_bottom = 38.0

[node name="hboxTS" type="HBoxContainer" parent="vbox"]
margin_top = 42.0
margin_right = 284.0
margin_bottom = 58.0

[node name="gridSizeLabel" type="Label" parent="vbox/hboxTS"]
margin_top = 1.0
margin_right = 61.0
margin_bottom = 15.0
text = "Grid Size:"

[node name="gridSize" type="HSlider" parent="vbox/hboxTS"]
margin_left = 65.0
margin_right = 284.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 4.0
max_value = 25.0
value = 25.0
ticks_on_borders = true

[connection signal="pressed" from="vbox/hboxBT/loadBkgd" to="." method="_on_loadBkgd_pressed"]
[connection signal="imageLoaded" from="vbox/hboxBT/loadBkgd/fxchg" to="." method="_on_fxchg_imageLoaded"]
[connection signal="pressed" from="vbox/hboxBT/hexMode" to="." method="_on_hexMode_pressed"]
[connection signal="value_changed" from="vbox/hboxTS/gridSize" to="." method="_on_gridSize_value_changed"]
